--- a/pages/katalog.html
+++ b/pages/katalog.html
@@ -310,52 +310,51 @@
                            </a>
                         </li>
                         <li>
-                           <a href="">
-                              Женская 
-                              <span>
-                                 <svg width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7.1247 5.50024C6.75948 5.79242 6.24052 5.79242 5.87531 5.50024L1.22609 1.78087C0.487949 1.19036 0.905504 0 1.85078 0L11.1492 0C12.0945 0 12.5121 1.19036 11.7739 1.78087L7.1247 5.50024Z"/>
-                                 </svg>
-                              </span>
-                              <div class="sub-menu_wrapper">
-                                 <ul class="sub-menu">
-                                    <li><a href=""><span class="sub-nav_menu-text">Балетки</span><span class="sub-nav_menu-counter">(450)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Кеды</span><span class="sub-nav_menu-counter">(250)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Ботинки</span><span class="sub-nav_menu-counter">(1450)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Кросовки</span><span class="sub-nav_menu-counter">(9450)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Кроксы</span><span class="sub-nav_menu-counter">(400)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Ботинки</span><span class="sub-nav_menu-counter">(150)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Бутсы</span><span class="sub-nav_menu-counter">(459)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Тапки</span><span class="sub-nav_menu-counter">(421)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Тапочки</span><span class="sub-nav_menu-counter">(221)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Сапоги</span><span class="sub-nav_menu-counter">(429)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Сникерсы</span><span class="sub-nav_menu-counter">(228)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Угги</span><span class="sub-nav_menu-counter">(1337)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Футбольная обувь</span><span class="sub-nav_menu-counter">(1488)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Шлепки</span><span class="sub-nav_menu-counter">(1332)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Чешки</span><span class="sub-nav_menu-counter">(3213)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Слипоны</span><span class="sub-nav_menu-counter">(429)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Сапоги</span><span class="sub-nav_menu-counter">(429)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Сникерсы</span><span class="sub-nav_menu-counter">(228)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Угги</span><span class="sub-nav_menu-counter">(1337)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Футбольная обувь</span><span class="sub-nav_menu-counter">(1488)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Шлепки</span><span class="sub-nav_menu-counter">(1332)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Чешки</span><span class="sub-nav_menu-counter">(3213)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Слипоны</span><span class="sub-nav_menu-counter">(429)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Сапоги</span><span class="sub-nav_menu-counter">(429)</span></a></li>
-                                    <li><a href=""><span class="sub-nav_menu-text">Сникерсы</span><span class="sub-nav_menu-counter">(228)</span></a></li>
-                                 </ul>
-                              </div>
-                           </a>
-                        </li>
+                            <div>
+                                <a href="">
+                                 Женская 
+                                 <span>
+                                    <svg width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                       <path d="M7.1247 5.50024C6.75948 5.79242 6.24052 5.79242 5.87531 5.50024L1.22609 1.78087C0.487949 1.19036 0.905504 0 1.85078 0L11.1492 0C12.0945 0 12.5121 1.19036 11.7739 1.78087L7.1247 5.50024Z"/>
+                                     </svg>
+                                 </span>
+                                </a>
+                               <div class="sub-menu_wrapper">
+                                  <ul class="sub-menu">
+                                     <li><a href=""><span class="sub-nav_menu-text">Балетки</span><span class="sub-nav_menu-counter">(450)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Кеды</span><span class="sub-nav_menu-counter">(250)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Ботинки</span><span class="sub-nav_menu-counter">(1450)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Кросовки</span><span class="sub-nav_menu-counter">(9450)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Кроксы</span><span class="sub-nav_menu-counter">(400)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Ботинки</span><span class="sub-nav_menu-counter">(150)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Бутсы</span><span class="sub-nav_menu-counter">(459)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Тапки</span><span class="sub-nav_menu-counter">(421)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Тапочки</span><span class="sub-nav_menu-counter">(221)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Сапоги</span><span class="sub-nav_menu-counter">(429)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Сникерсы</span><span class="sub-nav_menu-counter">(228)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Угги</span><span class="sub-nav_menu-counter">(1337)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Футбольная обувь</span><span class="sub-nav_menu-counter">(1488)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Шлепки</span><span class="sub-nav_menu-counter">(1332)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Чешки</span><span class="sub-nav_menu-counter">(3213)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Слипоны</span><span class="sub-nav_menu-counter">(429)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Сапоги</span><span class="sub-nav_menu-counter">(429)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Сникерсы</span><span class="sub-nav_menu-counter">(228)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Угги</span><span class="sub-nav_menu-counter">(1337)</span></a></li>
+                                     <li><a href=""><span class="sub-nav_menu-text">Футбольная обувь</span><span class="sub-nav_menu-counter">(1488)</span></a></li>
+                                  </ul>
+                               </div>
+                            </div>
+                         </li>
                         <li>
-                           <a href="">
-                              Детская 
-                              <span>
-                                 <svg width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7.1247 5.50024C6.75948 5.79242 6.24052 5.79242 5.87531 5.50024L1.22609 1.78087C0.487949 1.19036 0.905504 0 1.85078 0L11.1492 0C12.0945 0 12.5121 1.19036 11.7739 1.78087L7.1247 5.50024Z"/>
-                                 </svg>
-                              </span>
+                           <div>
+                               <a href="">
+                                Детская 
+                                <span>
+                                   <svg width="13" height="6" viewBox="0 0 13 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                      <path d="M7.1247 5.50024C6.75948 5.79242 6.24052 5.79242 5.87531 5.50024L1.22609 1.78087C0.487949 1.19036 0.905504 0 1.85078 0L11.1492 0C12.0945 0 12.5121 1.19036 11.7739 1.78087L7.1247 5.50024Z"/>
+                                    </svg>
+                                </span>
+                               </a>
                               <div class="sub-menu_wrapper">
                                  <ul class="sub-menu">
                                     <li><a href=""><span class="sub-nav_menu-text">Балетки</span><span class="sub-nav_menu-counter">(450)</span></a></li>
@@ -378,9 +377,12 @@
                                     <li><a href=""><span class="sub-nav_menu-text">Сникерсы</span><span class="sub-nav_menu-counter">(228)</span></a></li>
                                     <li><a href=""><span class="sub-nav_menu-text">Угги</span><span class="sub-nav_menu-counter">(1337)</span></a></li>
                                     <li><a href=""><span class="sub-nav_menu-text">Футбольная обувь</span><span class="sub-nav_menu-counter">(1488)</span></a></li>
+                                    <li><a href=""><span class="sub-nav_menu-text">Сникерсы</span><span class="sub-nav_menu-counter">(228)</span></a></li>
+                                    <li><a href=""><span class="sub-nav_menu-text">Угги</span><span class="sub-nav_menu-counter">(1337)</span></a></li>
+                                    <li><a href=""><span class="sub-nav_menu-text">Футбольная обувь</span><span class="sub-nav_menu-counter">(1488)</span></a></li>
                                  </ul>
                               </div>
-                           </a>
+                           </div>
                         </li>
                         <li><a href="">Украинская обувь</a></li>
                         <li><a href="">Бренды</a></li>
@@ -1020,23 +1022,6 @@
                      </svg>                        
                   </a>
                </div>
-               <div class="main-pluses">
-                   <div class="main-pluses_item">
-                       <img class="main-pluses_icon" src="../img/icons/delivery-truck.svg">
-                       <div class="main-pluses-line main-pluses-line_1"></div>
-                       <div class="main-pluses-title"><span class="main-pluses_title_1">Бессплатная</span><span>Доставка</span><p>При заказе от 20 ящиков</p></div>
-                   </div>
-                   <div class="main-pluses_item">
-                        <img class="main-pluses_icon" src="../img/icons/wallet.svg">
-                        <div class="main-pluses-line main-pluses-line_2"></div>
-                        <div class="main-pluses-title"><span class="main-pluses_title_2">Гарантия</span><span>Возврата</span><p>Возврат в течение 14 дней</p></div>
-                   </div>
-                   <div class="main-pluses_item">
-                        <img class="main-pluses_icon" src="../img/icons/open-24-hours.svg">
-                        <div class="main-pluses-line main-pluses-line_3"></div>
-                        <div class="main-pluses-title"><span class="main-pluses_title_3">Информация</span><span>О товаре</span><p>Онлайн поддержка клиентов 24/7</p></div>
-                   </div>
-               </div>
                <div class="main-navigation">
                    <nav>
                        <ul>
@@ -1162,7 +1147,6 @@
       <!-- SCRIPTS -->
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
       <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
       <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
