--- a/assets/html/404.html
+++ b/assets/html/404.html
@@ -9,7 +9,7 @@
     <h2>Ой... мы не можем найти эту страницу</h2>
     <p>Возможно вы ошиблись в адрессе или страница была перемещена. <br>
       Вы можите вернутся на главную, или воспользоватся меню</p>
-    <a href="">Перейти на главная</a>
+    <a class="btn-animate" href="/">Перейти на главную</a>
   </div>
 </body>
 
