--- a/assets/html/registration_success.html
+++ b/assets/html/registration_success.html
@@ -6,7 +6,7 @@
   <div class="message-page">
     <img class="message-page_lil-icon" src="img/icons/registration.svg" alt="">
     <h2>Регистрация прошла успешно</h2>
-    <a href="">Перейти к покупкам</a>
+    <a class="btn-animate" href="">Перейти к покупкам</a>
   </div>
 </body>
 
