--- a/assets/html/order_accept.html
+++ b/assets/html/order_accept.html
@@ -7,7 +7,7 @@
     <img class="message-page_lil-icon" src="img/icons/order.svg" alt="">
     <h2>Спасибо, Ваш заказ <span>№34566778</span> принят!</h2>
     <p>Наши менеджеры в ближайшее время свяжуться с вами</p>
-    <a href="">Перейти на главную</a>
+    <a class="btn-animate" href="">Перейти на главную</a>
   </div>
 </body>
 
